# Q-A-tele-bot

./: .replit  Dockerfile  README.md  index.html  main (1).py  pnpm-lock.yaml  pyproject.toml  questions.json  railway.toml  replit.md  requirements (1) (2).txt  server.properties  start.sh  tsconfig.tsbuildinfo
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: auth.ts  guilds.ts  index.ts
artifacts/dashboard/.replit-artifact/: artifact.toml
artifacts/dashboard/src/: index.css
artifacts/dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx
artifacts/landing/: index.html
artifacts/landing/.replit-artifact/: artifact.toml
artifacts/landing/src/: App.tsx  index.css
artifacts/landing/src/pages/: Home.tsx  not-found.tsx
bot/: .env.example  README.md  config.py  main.py  requirements.txt
bot/cogs/: achievements.py  admin.py  api_server.py  economy.py  leaderboard.py  logging_cog.py  prestige.py  profile.py  rewards.py  xp.py
bot/data/: achievements_data.py  bot.db-shm  bot.db-wal  shop_items.json
bot/database/: db.py
bot/fonts/: README.md
bot/utils/: cache.py  helpers.py  rank_card.py  xp_math.py
bot/views/: shop_view.py
lib/api-spec/: openapi.yaml
lib/api-zod/src/: index.ts
