[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.4",
    "discord-py>=2.3.2",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]
